@@ -2,6 +2,8 @@
 
  - Bugfix #9957: Fixed error message on exceeded quota when placing a copy
    into sent folder during message transport
+ - Bugfix #9899: Re-building fetch item handlers if item order changes
+   during a FETCH response from IMAP server
 
 * 2007-10-23 - marcus.klein@open-xchange.com
 
